# 2D-Graphics-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  graphics.cpp  main.cs  rat.cpp
shaders/: fragshader.rat  vertshader.rat
